--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ p {
   position: absolute;
   top: 0;
   right: 0;
-  background-color: #FDBD03;
+  background-color: #fdbd03;
   width: 20%;
   height: 10px;
 }
@@ -31,13 +31,13 @@ p {
   position: absolute;
   bottom: 0;
   left: 0;
-  background-color: #FDBD03;
+  background-color: #fdbd03;
   width: 50%;
   height: 10px;
 }
 .mainContainer i {
   cursor: pointer;
-  background-color: #FDBD03;
+  background-color: #fdbd03;
   border-radius: 50%;
   font-size: 2rem;
   text-align: center;
@@ -59,13 +59,19 @@ p {
   animation: myAnim 20s linear 0s infinite normal forwards;
 }
 @keyframes myAnim {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateY(0);
   }
-  10%, 30%, 50%, 70% {
+  10%,
+  30%,
+  50%,
+  70% {
     transform: translateY(-8px);
   }
-  20%, 40%, 60% {
+  20%,
+  40%,
+  60% {
     transform: translateY(8px);
   }
   80% {
@@ -77,7 +83,7 @@ p {
 }
 
 .contactSide h1 {
-  color: #FDBD03;
+  color: #fdbd03;
   font-size: 3.8rem;
   font-weight: 800;
 }
@@ -99,8 +105,8 @@ p {
 }
 .contactSide form .formSection input {
   border: none;
-  background-color: #E5EEFF;
-  border-bottom: 2px solid #FDBD03;
+  background-color: #e5eeff;
+  border-bottom: 2px solid #fdbd03;
   height: 35px;
   width: 300px;
 }
@@ -109,8 +115,8 @@ p {
 }
 .contactSide form .formSection textarea {
   border: none;
-  background-color: #E5EEFF;
-  border-bottom: 2px solid #FDBD03;
+  background-color: #e5eeff;
+  border-bottom: 2px solid #fdbd03;
   height: 140px;
   width: 620px;
 }
@@ -128,10 +134,14 @@ p {
   margin-top: 5px;
   cursor: pointer;
   border: none;
-  background-color: #FDBD03;
+  background-color: #fdbd03;
   font-size: 1rem;
   font-weight: 600;
   padding: 6.4px 32px;
+}
+
+button:disabled {
+  opacity: 0.5;
 }
 
 .contactSocial {
@@ -144,7 +154,7 @@ p {
 }
 .contactSocial i {
   cursor: pointer;
-  background-color: #FDBD03;
+  background-color: #fdbd03;
   border-radius: 50%;
   font-size: 1.3rem;
   text-align: center;
@@ -222,7 +232,7 @@ p {
   }
   .contactSocial i {
     cursor: pointer;
-    background-color: #FDBD03;
+    background-color: #fdbd03;
     border-radius: 50%;
     font-size: 1rem;
     text-align: center;
@@ -235,4 +245,4 @@ p {
   .contactSocial i:hover {
     transform: scale(1.2);
   }
-}/*# sourceMappingURL=main.css.map */
+} /*# sourceMappingURL=main.css.map */
